Revert "TextEditor - Prevent custom buttons overlapping in ie11 (T879885)(#12814)" (#12823)
This reverts commit 302dbfb7436e614f10dda268074231c2341f2d27.

--- a/styles/widgets/common/textEditor.less
+++ b/styles/widgets/common/textEditor.less
@@ -11,7 +11,6 @@
 .dx-editor-content-wrapper() {
     display: flex;
     flex-grow: 1;
-    width: 0;
     position: relative;
     align-items: baseline;
 }
